# sse-playground

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
frontend/: vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AIPanel.jsx  BroadcastPanel.jsx  LogsPanel.jsx  NotificationsPanel.jsx  Panel.jsx  ProgressPanel.jsx  UnstablePanel.jsx  WireTapPanel.jsx  ui.jsx
frontend/src/context/: WireTapContext.jsx
frontend/src/hooks/: useSSE.js
static/: index.html
