[project]
name = "sse-playground"
version = "0.1.0"
description = "A hands-on playground for learning Server-Sent Events (SSE) with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
